# -Agentic_AI-

./: README.md
hello_world/: main.py  pyproject.toml
hello_world/uv_packages/: pyproject.toml
