[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
        "openai-agents>=0.0.16",
        "streamlit>=1.45.1",
]

[tool.uv.workspace]
members = [
    "uv_packages",
    "uv_packages/uv_packages",
]

